--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Sergio es Gay | Template </title>
+    <title>MVP | Template </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -53,9 +53,9 @@
                                 <ul id="navigation">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="courses.html">Courses</a></li>
-                                    <li><a href="pricing.html">Pricing</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="courses.html">Cursos</a></li>
+                                    <li><a href="pricing.html">Precios</a></li>
+                                    <li><a href="gallery.html">Galeria</a></li>
                                     <li><a href="blog.html">Blog</a>
                                         <ul class="submenu">
                                             <li><a href="blog.html">Blog</a></li>
@@ -63,7 +63,7 @@
                                             <li><a href="elements.html">Elements</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="contact.html">Contactanos</a></li>
                                 </ul>
                             </nav>
                         </div>          
@@ -91,9 +91,9 @@
                     <div class="row">
                         <div class="col-xl-9 col-lg-9 col-md-10">
                             <div class="hero__caption">
-                                <span data-animation="fadeInLeft" data-delay="0.1s">Hi This is  Zacson</span>
+                                <span data-animation="fadeInLeft" data-delay="0.1s">Hi This is  Sergio</span>
                                 <h1 data-animation="fadeInLeft" data-delay="0.4s">Gym Trainer</h1>
-                                <a href="courses.html" class="border-btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">My Courses</a>
+                                <a href="courses.html" class="border-btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">Cursos</a>
                             </div>
                         </div>
                     </div>
@@ -266,7 +266,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section-tittle text-center mb-55 wow fadeInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                        <h2>Pricing</h2>
+                        <h2>Servicios</h2>
                     </div>
                 </div>
             </div>
@@ -278,14 +278,14 @@
                                 <img src="assets/img/icon/price.svg" alt="">
                             </div>
                             <div class="properties__caption">
-                                <span class="month">6 month</span>
-                                <p class="mb-25">$30/m  <span>(Single class)</span></p>
+                                <span class="month">Plan de Entrenamiento </span>
+                                <p class="mb-25">$ X/m  <span>(Single class)</span></p>
                                 <div class="single-features">
                                     <div class="features-icon">
                                         <img src="assets/img/icon/check.svg" alt="">
                                     </div>
                                     <div class="features-caption">
-                                        <p>Free riding </p>
+                                        <p>Programa de entrenamiento personalizado de 12 semanas </p>
                                     </div>
                                 </div>
                                 <div class="single-features">
@@ -293,7 +293,7 @@
                                         <img src="assets/img/icon/check.svg" alt="">
                                     </div>
                                     <div class="features-caption">
-                                        <p>Unlimited equipments</p>
+                                        <p>Ebook “Principales fundamentos en el entrenamiento”</p>
                                     </div>
                                 </div>
                                 <div class="single-features">
@@ -301,7 +301,7 @@
                                         <img src="assets/img/icon/check.svg" alt="">
                                     </div>
                                     <div class="features-caption">
-                                        <p>Personal trainer</p>
+                                        <p>Videos demostrativos de cada ejercicio.</p>
                                     </div>
                                 </div>
                                 <div class="single-features">
@@ -309,7 +309,7 @@
                                         <img src="assets/img/icon/check.svg" alt="">
                                     </div>
                                     <div class="features-caption">
-                                        <p>Weight losing classes</p>
+                                        <p>Rango de repeticiones y tiempo de descanso detallado.</p>
                                     </div>
                                 </div>
                                 <div class="single-features mb-20">
@@ -317,7 +317,7 @@
                                         <img src="assets/img/icon/check.svg" alt="">
                                     </div>
                                     <div class="features-caption">
-                                        <p>Month to mouth</p>
+                                        <p>Acceso a un tracker compartido para monitorear tus progresos.</p>
                                     </div>
                                 </div>
                                 <a href="#" class="border-btn border-btn2">Join Now</a>
@@ -332,14 +332,14 @@
                                 <img src="assets/img/icon/price.svg" alt="">
                             </div>
                             <div class="properties__caption">
-                                <span class="month">6 month</span>
+                                <span class="month">Plan Nutricional</span>
                                 <p class="mb-25">$30/m  <span>(Single class)</span></p>
                                 <div class="single-features">
                                     <div class="features-icon">
                                         <img src="assets/img/icon/check.svg" alt="">
                                     </div>
                                     <div class="features-caption">
-                                        <p>Free riding </p>
+                                        <p>Plan nutricional personalizado de 12 semanas. </p>
                                     </div>
                                 </div>
                                 <div class="single-features">
@@ -347,7 +347,7 @@
                                         <img src="assets/img/icon/check.svg" alt="">
                                     </div>
                                     <div class="features-caption">
-                                        <p>Unlimited equipments</p>
+                                        <p>Cookbook “nombre de la empresa”</p>
                                     </div>
                                 </div>
                                 <div class="single-features">
@@ -355,7 +355,7 @@
                                         <img src="assets/img/icon/check.svg" alt="">
                                     </div>
                                     <div class="features-caption">
-                                        <p>Personal trainer</p>
+                                        <p>Macros y calorías en detalle, según tus requerimientos. </p>
                                     </div>
                                 </div>
                                 <div class="single-features">
@@ -363,7 +363,7 @@
                                         <img src="assets/img/icon/check.svg" alt="">
                                     </div>
                                     <div class="features-caption">
-                                        <p>Weight losing classes</p>
+                                        <p>Variedad opcional. Diferentes comidas si prefieres o mantener la consistencia de las comidas a lo largo de la semana.</p>
                                     </div>
                                 </div>
                                 <div class="single-features mb-20">
@@ -371,7 +371,7 @@
                                         <img src="assets/img/icon/check.svg" alt="">
                                     </div>
                                     <div class="features-caption">
-                                        <p>Month to mouth</p>
+                                        <p>Detalle en específico de los componentes nutricionales de cada alimento, comida y el total diario.</p>
                                     </div>
                                 </div>
                                 <a href="#" class="border-btn border-btn2">Join Now</a>
@@ -386,14 +386,14 @@
                                 <img src="assets/img/icon/price.svg" alt="">
                             </div>
                             <div class="properties__caption">
-                                <span class="month">6 month</span>
+                                <span class="month">Programa de entrenamiento personalizado + Plan nutricional </span>
                                 <p class="mb-25">$30/m  <span>(Single class)</span></p>
                                 <div class="single-features">
                                     <div class="features-icon">
                                         <img src="assets/img/icon/check.svg" alt="">
                                     </div>
                                     <div class="features-caption">
-                                        <p>Free riding </p>
+                                        <p>Todas las características juntas del programa de entrenamiento personalizado y el plan nutricional personalizado. </p>
                                     </div>
                                 </div>
                                 <div class="single-features">
@@ -450,13 +450,10 @@
                 <!-- section tittle -->
                 <div class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                     <div class="front-text">
-                        <h2 class="">About Me</h2>
-                        <p>You’ll look at graphs and charts in Task One, how to approach the task and the language needed 
-                            for a successful answer. You’ll examine Task Two questions and learn how to plan, write and 
-                        check academic essays.</p>
-                        <p class="mb-40">Task One, how to approach the task and the language needed for a successful answer. You’ll 
-                        examine Task Two questions and learn how to plan, write and check academic essays.</p>
-                        <a href="courses.html" class="border-btn">My Courses</a>
+                        <h2 class="">Quienes Somos</h2>
+                        <p>Somos bien Cheveres y guapos</p>
+                        <p class="mb-40">La vida es dura y la noche es oscura</p>
+                        <a href="courses.html" class="border-btn">Mis Cursos</a>
                     </div>
                 </div>
             </div>
