--- a/about.html
+++ b/about.html
@@ -52,10 +52,10 @@
                             <nav>
                                 <ul id="navigation">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="courses.html">Courses</a></li>
-                                    <li><a href="pricing.html">Pricing</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="about.html">Nosotros</a></li>
+                                    <li><a href="courses.html">Servicios</a></li>
+                                    <li><a href="pricing.html">Precios</a></li>
+                                    <li><a href="gallery.html">Galeria</a></li>
                                     <li><a href="blog.html">Blog</a>
                                         <ul class="submenu">
                                             <li><a href="blog.html">Blog</a></li>
@@ -63,13 +63,13 @@
                                             <li><a href="elements.html">Elements</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="contact.html">Contactanos</a></li>
                                 </ul>
                             </nav>
                         </div>          
                         <!-- Header-btn -->
                         <div class="header-btns d-none d-lg-block f-right">
-                           <a href="contact.html" class="btn">Contact me</a>
+                           <a href="contact.html" class="btn">Contactanos</a>
                        </div>
                        <!-- Mobile Menu -->
                        <div class="col-12">
@@ -89,7 +89,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="hero-cap hero-cap2 pt-70">
-                            <h2>About Me</h2>
+                            <h2>Acerca de Nosotros</h2>
                         </div>
                     </div>
                 </div>
@@ -151,10 +151,8 @@
                 <!-- section tittle -->
                 <div class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                     <div class="front-text">
-                        <h2 class="">About Me</h2>
-                        <p>You’ll look at graphs and charts in Task One, how to approach the task and the language needed 
-                            for a successful answer. You’ll examine Task Two questions and learn how to plan, write and 
-                        check academic essays.</p>
+                        <h2 class="">Acerca de Nostros</h2>
+                        <p>Somos un equipo de jovenes que creemos que todos puedes conseguir metas en el aspecto fisico y de salud</p>
                         <p class="mb-40">Task One, how to approach the task and the language needed for a successful answer. You’ll 
                         examine Task Two questions and learn how to plan, write and check academic essays.</p>
                         <a href="courses.html" class="border-btn">My Courses</a>
