--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <nav>
                                 <ul id="navigation">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="about.html">Nosotros</a></li>
                                     <li><a href="courses.html">Cursos</a></li>
                                     <li><a href="pricing.html">Precios</a></li>
                                     <li><a href="gallery.html">Galeria</a></li>
@@ -69,7 +69,7 @@
                         </div>          
                         <!-- Header-btn -->
                         <div class="header-btns d-none d-lg-block f-right">
-                           <a href="contact.html" class="btn">Contact me</a>
+                           <a href="contact.html" class="btn">Contactanos</a>
                        </div>
                        <!-- Mobile Menu -->
                        <div class="col-12">
@@ -91,9 +91,9 @@
                     <div class="row">
                         <div class="col-xl-9 col-lg-9 col-md-10">
                             <div class="hero__caption">
-                                <span data-animation="fadeInLeft" data-delay="0.1s">Hi This is  Sergio</span>
-                                <h1 data-animation="fadeInLeft" data-delay="0.4s">Gym Trainer</h1>
-                                <a href="courses.html" class="border-btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s">Cursos</a>
+                                <span data-animation="fadeInLeft" data-delay="0.1s">¿Estas preparado para transformar?</span>
+                                <h1 data-animation="fadeInLeft" data-delay="0.4s">Asesoramiento Fitness Online</h1>
+                                <a href="courses.html" class="border-btn hero-btn" data-animation="fadeInLeft" data-delay="0.8s"></a>
                             </div>
                         </div>
                     </div>
@@ -266,7 +266,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section-tittle text-center mb-55 wow fadeInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                        <h2>Servicios</h2>
+                        <h2>Cursos</h2>
                     </div>
                 </div>
             </div>
@@ -279,7 +279,7 @@
                             </div>
                             <div class="properties__caption">
                                 <span class="month">Plan de Entrenamiento </span>
-                                <p class="mb-25">$ X/m  <span>(Single class)</span></p>
+                                <p class="mb-25">$ 30/m  <span>(12 sem)</span></p>
                                 <div class="single-features">
                                     <div class="features-icon">
                                         <img src="assets/img/icon/check.svg" alt="">
@@ -333,7 +333,7 @@
                             </div>
                             <div class="properties__caption">
                                 <span class="month">Plan Nutricional</span>
-                                <p class="mb-25">$30/m  <span>(Single class)</span></p>
+                                <p class="mb-25">$30/m  <span>(12 sem)</span></p>
                                 <div class="single-features">
                                     <div class="features-icon">
                                         <img src="assets/img/icon/check.svg" alt="">
@@ -386,8 +386,8 @@
                                 <img src="assets/img/icon/price.svg" alt="">
                             </div>
                             <div class="properties__caption">
-                                <span class="month">Programa de entrenamiento personalizado + Plan nutricional </span>
-                                <p class="mb-25">$30/m  <span>(Single class)</span></p>
+                                <span class="month">Plan de entrenamiento  + Plan nutricional </span>
+                                <p class="mb-25">$50/m  <span>(12 sem)</span></p>
                                 <div class="single-features">
                                     <div class="features-icon">
                                         <img src="assets/img/icon/check.svg" alt="">
