--- a/gallery.html
+++ b/gallery.html
@@ -52,10 +52,10 @@
                             <nav>
                                 <ul id="navigation">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="courses.html">Courses</a></li>
-                                    <li><a href="pricing.html">Pricing</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="about.html">Nosotros</a></li>
+                                    <li><a href="courses.html">Cursos</a></li>
+                                    <li><a href="pricing.html">Precios</a></li>
+                                    <li><a href="gallery.html">Casos</a></li>
                                     <li><a href="blog.html">Blog</a>
                                         <ul class="submenu">
                                             <li><a href="blog.html">Blog</a></li>
@@ -89,7 +89,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="hero-cap hero-cap2 pt-70">
-                            <h2>Gallery</h2>
+                            <h2>Casos Exitosos</h2>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
             <div class="row">
                 <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery1.png);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/Gaspar_440x500.png);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Muscle gaining </h3>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery2.png);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/Querubin_420x500.png);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Muscle gaining </h3>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery3.png);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/Renato_420x500.png);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Muscle gaining </h3>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
                     <div class="box snake mb-30">
-                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery4.png);"></div>
+                        <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/Serx_400x500.png);"></div>
                         <div class="overlay">
                             <div class="overlay-content">
                                 <h3>Muscle gaining </h3>
