--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                     <li><a href="about.html">Nosotros</a></li>
                                     <li><a href="courses.html">Cursos</a></li>
                                     <li><a href="pricing.html">Precios</a></li>
-                                    <li><a href="gallery.html">Galeria</a></li>
+                                    <li><a href="gallery.html">Casos</a></li>
                                     <li><a href="blog.html">Blog</a>
                                         <ul class="submenu">
                                             <li><a href="blog.html">Blog</a></li>
@@ -582,7 +582,7 @@
                                                     <li><a href="about.html">About</a></li>
                                                     <li><a href="courses.html">Courses</a></li>
                                                     <li><a href="pricing.html">Pricing</a></li>
-                                                    <li><a href="gallery.html">Gallery</a></li>
+                                                    <li><a href="gallery.html">Casos</a></li>
                                                     <li><a href="contact.html">Contact</a></li>
                                                 </ul>
                                             </nav>
